HOCS-3556 - Add CaseLinkSummary into GetSummaryResponse