@@ -9,6 +9,7 @@ import org.mockito.junit.MockitoJUnitRunner;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import uk.gov.digital.ho.hocs.casework.api.dto.CaseDataType;
+import uk.gov.digital.ho.hocs.casework.api.dto.CaseSummaryLink;
 import uk.gov.digital.ho.hocs.casework.api.dto.CreateCaseRequest;
 import uk.gov.digital.ho.hocs.casework.api.dto.CreateCaseResponse;
 import uk.gov.digital.ho.hocs.casework.api.dto.GetCaseReferenceResponse;
@@ -31,8 +32,6 @@ import uk.gov.digital.ho.hocs.casework.domain.model.Topic;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -128,7 +127,7 @@ public class CaseDataResourceTest {
 
         doNothing().when(caseDataService).deleteCase(uuid, true);
 
-        ResponseEntity response = caseDataResource.deleteCase(uuid, true);
+        ResponseEntity<Void> response = caseDataResource.deleteCase(uuid, true);
 
         verify(caseDataService, times(1)).deleteCase(uuid, true);
 
@@ -150,11 +149,14 @@ public class CaseDataResourceTest {
         verifyNoMoreInteractions(caseDataService);
 
         assertThat(response).isNotNull();
+        assertThat(response.getBody()).isNotNull();
 
         // check the fields are returned
         GetCaseSummaryResponse body = response.getBody();
-        assertThat(body.getPreviousCaseReference()).isEqualTo(PREVIOUS_CASE_REFERENCE);
-        assertThat(body.getPreviousCaseUUID()).isEqualTo(RANDOM_UUID);
+        assertThat(body.getPreviousCase()).isNotNull();
+        CaseSummaryLink link = body.getPreviousCase();
+        assertThat(link.getCaseReference()).isEqualTo(PREVIOUS_CASE_REFERENCE);
+        assertThat(link.getCaseUUID()).isEqualTo(RANDOM_UUID);
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
     }
 
@@ -175,21 +177,24 @@ public class CaseDataResourceTest {
 
         ResponseEntity<GetCaseResponse> response = caseDataResource.getCase(uuid, Optional.of(Boolean.TRUE));
 
+        assertThat(response).isNotNull();
         verify(caseDataService, times(1)).getCase(uuid);
 
         verifyNoMoreInteractions(caseDataService);
 
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+        assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody().getPrimaryCorrespondent()).isInstanceOf(GetCorrespondentResponse.class);
         assertThat(response.getBody().getPrimaryTopic()).isInstanceOf(GetTopicResponse.class);
     }
 
     @Test
     public void shouldCalculateTotals() {
-        Map<String, String> totals = new HashMap();
+        Map<String, String> totals = new HashMap<>();
         when(caseDataService.calculateTotals(uuid, uuid, "list")).thenReturn(totals);
 
-        ResponseEntity response = caseDataResource.calculateTotals(uuid, uuid, "list");
+        ResponseEntity<Map<String, String>> response = caseDataResource.calculateTotals(uuid, uuid, "list");
 
         verify(caseDataService, times(1)).calculateTotals(uuid, uuid, "list");
         verifyNoMoreInteractions(caseDataService);
@@ -205,7 +210,7 @@ public class CaseDataResourceTest {
 
         doNothing().when(caseDataService).updateCaseData(uuid, uuid, data);
 
-        ResponseEntity response = caseDataResource.updateCaseData(uuid, uuid, updateCaseDataRequest);
+        ResponseEntity<Void> response = caseDataResource.updateCaseData(uuid, uuid, updateCaseDataRequest);
 
         verify(caseDataService, times(1)).updateCaseData(uuid, uuid, data);
         verifyNoMoreInteractions(caseDataService);
@@ -221,7 +226,7 @@ public class CaseDataResourceTest {
         doNothing().when(caseDataService).updateDateReceived(uuid, uuid, dateArg, 0);
 
         // when
-        ResponseEntity response = caseDataResource.updateCaseDateReceived(uuid, uuid, dateArg);
+        ResponseEntity<Void> response = caseDataResource.updateCaseDateReceived(uuid, uuid, dateArg);
 
         // then
         verify(caseDataService, times(1)).updateDateReceived(uuid, uuid, dateArg, 0);
@@ -237,7 +242,7 @@ public class CaseDataResourceTest {
         doNothing().when(caseDataService).updateDispatchDeadlineDate(uuid, uuid, dateArg);
 
         // when
-        ResponseEntity response = caseDataResource.updateCaseDispatchDeadlineDate(uuid, uuid, dateArg);
+        ResponseEntity<Void> response = caseDataResource.updateCaseDispatchDeadlineDate(uuid, uuid, dateArg);
 
         // then
         verify(caseDataService, times(1)).updateDispatchDeadlineDate(uuid, uuid, dateArg);
@@ -251,7 +256,7 @@ public class CaseDataResourceTest {
         UpdateStageDeadlineRequest updateStageDeadlineRequest = new UpdateStageDeadlineRequest("TEST", 7);
         doNothing().when(caseDataService).updateStageDeadline(uuid, uuid, "TEST", 7);
 
-        ResponseEntity response = caseDataResource.updateStageDeadline(uuid, uuid, updateStageDeadlineRequest);
+        ResponseEntity<Void> response = caseDataResource.updateStageDeadline(uuid, uuid, updateStageDeadlineRequest);
 
         verify(caseDataService).updateStageDeadline(uuid, uuid, "TEST", 7);
         verifyNoMoreInteractions(caseDataService);
@@ -264,10 +269,10 @@ public class CaseDataResourceTest {
         String[] texts = {"Text1"};
         UpdateTeamByStageAndTextsRequest request = new UpdateTeamByStageAndTextsRequest(
                 uuid, uuid, "stageType", "teamUUIDKey", "teamNameKey", texts);
-        Map<String, String> teamMap = new HashMap();
+        Map<String, String> teamMap = new HashMap<>();
         when(caseDataService.updateTeamByStageAndTexts(uuid, uuid, "stageType", "teamUUIDKey", "teamNameKey", texts)).thenReturn(teamMap);
 
-        ResponseEntity response = caseDataResource.updateTeamByStageAndTexts(uuid, uuid, request);
+        ResponseEntity<UpdateTeamByStageAndTextsResponse> response = caseDataResource.updateTeamByStageAndTexts(uuid, uuid, request);
 
         verify(caseDataService).updateTeamByStageAndTexts(uuid, uuid, "stageType", "teamUUIDKey", "teamNameKey", texts);
         verifyNoMoreInteractions(caseDataService);
@@ -275,13 +280,13 @@ public class CaseDataResourceTest {
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody()).isInstanceOf(UpdateTeamByStageAndTextsResponse.class);
-        assertThat(((UpdateTeamByStageAndTextsResponse) response.getBody()).getTeamMap()).isEqualTo(teamMap);
+        assertThat(response.getBody().getTeamMap()).isEqualTo(teamMap);
     }
 
     @Test
     public void shouldGetDocumentTags(){
         UUID caseUUID = UUID.randomUUID();
-        List<String> documentTags = new ArrayList<String>(Arrays.asList("Tag"));
+        List<String> documentTags = List.of("Tag");
         when(caseDataService.getDocumentTags(caseUUID)).thenReturn(documentTags);
 
         ResponseEntity<List<String>> response = caseDataResource.getDocumentTags(caseUUID);
@@ -293,7 +298,7 @@ public class CaseDataResourceTest {
 
     @Test
     public void shouldEvictFromTheCache() {
-        ResponseEntity responseEntity = caseDataResource.clearCachedTemplateForCaseType(caseDataType.getDisplayName());
+        ResponseEntity<String> responseEntity = caseDataResource.clearCachedTemplateForCaseType(caseDataType.getDisplayName());
 
         assertThat(responseEntity.getBody()).isEqualTo("Cache Cleared");
         assertThat(responseEntity.getStatusCode()).isEqualTo(HttpStatus.OK);
@@ -320,7 +325,7 @@ public class CaseDataResourceTest {
     public void updateCaseDataValue() {
         String variableName = "TestVariableName";
 
-        ResponseEntity<String> results = caseDataResource.updateCaseDataValue(uuid, variableName, "TestValue");
+        ResponseEntity<Void> results = caseDataResource.updateCaseDataValue(uuid, variableName, "TestValue");
 
         assertThat(results).isNotNull();
         assertThat(results.getStatusCodeValue()).isEqualTo(200);
@@ -337,7 +342,7 @@ public class CaseDataResourceTest {
         UpdatePrimaryCorrespondentRequest primaryCorrespondentUUID =
                 new UpdatePrimaryCorrespondentRequest(primaryCorrespondentRequestUUID);
 
-        ResponseEntity results = caseDataResource.updatePrimaryCorrespondent(
+        ResponseEntity<Void> results = caseDataResource.updatePrimaryCorrespondent(
                 caseUUID,
                 stageUUID,
                 primaryCorrespondentUUID
@@ -357,7 +362,7 @@ public class CaseDataResourceTest {
                 new UpdateDeadlineForStagesRequest(stageTypeAndDaysMap);
 
 
-        ResponseEntity response = caseDataResource.updateDeadlineForStages(uuid, uuid, updateDeadlineForStagesRequest);
+        ResponseEntity<Void> response = caseDataResource.updateDeadlineForStages(uuid, uuid, updateDeadlineForStagesRequest);
 
         verify(caseDataService).updateDeadlineForStages(uuid, uuid, stageTypeAndDaysMap);
         verifyNoMoreInteractions(caseDataService);
